Add existing project files to Git 2

--- a/main.html
+++ b/main.html
@@ -17,9 +17,7 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            /* Disable horizontal scrolling */
             overflow-y: auto;
-            /* Enable vertical scrolling */
             width: 100%;
             height: 100%;
             background-color: #181818;
@@ -53,60 +51,20 @@
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about-us">About US</a></li>
                     <li><a href="#events">Events</a></li>
                     <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#about-us">About us</a></li>
                     <li><a href="#members">Members</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
     </div>
-    <div class="section" id="about-us">
-        <div id="vanta-bg-about"></div>
-        <div class="text3">
-            <h1>About Us</h1>
-            <p>We are the IEEE SIES GST Student Body for the academic year 2024, dedicated to fostering a collaborative
-                environment for students interested in engineering, technology, and innovation.</p>
-        </div>
-        <div class="subtext">
-            <h1 class="ms">mtts</h1>
-            <h1 class="cs">cs</h1>
-            <h1 class="wie">wie</h1>
-        </div>
-        <div class="btn111">
-            <button class="button-mtts"><a href="#events">know more →</a></button>
 
-            <button class="button-cs">
-                <a href="#events">know more →</a>
-            </button>
-            <button class="button-wie">
-                <a href="#events">know more →</a>
-            </button>
-        </div>
-        
-        <!-- <div class="carda">
-            <div data-position="top" class="carousel">
-                <span class="carousel__text">• ieee sies gst • ieee sies gst • ieee sies gst • ieee sies gst • ieee sies gst </span>
-            </div>
-
-            <span class="title">Highlight Curation</span>
-            <p class="paragraph">
-                Works autonomously through artificial intelligent and hundred of
-                micro-services
-            </p>
-            <div data-direction="right" data-position="bottom" class="carousel">
-                <span class="carousel__text">• card component • card component • card component • card component •
-                    card component • card component</span>
-            </div>
-        </div> -->
-
-    </div>
 
     <div class="section" id="events">
         <div id="vanta-bg-events"></div>
         <div data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-
         </div>
         <div class="text2">
             <h1>Events</h1>
@@ -142,7 +100,7 @@
                 </p>
                 <form class="card__form">
                     <input required="" type="email" placeholder="Your life" />
-                    <button class="card__button">Register</button>
+                    <button class="card__button"><a href="event.html"></a> Register</button>
                 </form>
             </div>
         </div>
@@ -293,7 +251,100 @@
                 </div>
             </div>
         </div>
-    <div class="section" id="podcast"></div>
+    </div>
+    <div class="section" id="about-us">
+        <div id="vanta-bg-about"></div>
+        <div class="text3">
+            <h1>About Us</h1>
+            <p>We are the IEEE SIES GST Student Body for the academic year 2024, dedicated to fostering a collaborative
+                environment for students interested in engineering, technology, and innovation.</p>
+        </div>
+        <div class="subtext">
+            <h1 class="ms">mtts</h1>
+            <h1 class="cs">cs</h1>
+            <h1 class="wie">wie</h1>
+        </div>
+        <div class="btn111">
+            <button class="button-mtts"><a href="#events">know more →</a></button>
+            <button class="button-cs">
+                <a href="#events">know more →</a>
+            </button>
+            <button class="button-wie">
+                <a href="#events">know more →</a>
+            </button>
+        </div>
+    </div>
+
+    </div>
+    <div class="section" id="contact">
+        <div class="text5">
+            <h1>Contact Us</h1>
+        </div>
+        <footer class="footer" role="contentinfo" itemscope itemtype="http://schema.org/Person">
+            
+            <div class="footer-left" itemscope itemtype="http://schema.org/Person" class="h-card">
+                <img src="IEEE SIESGST_white.png" alt="Profile Picture" itemprop="image" class="u-logo logo" />
+                <h3 itemprop="name" class="p-name">IEEE Student Chapter of SIES GST</h3>
+                <p class="p-job-title" itemprop="jobTitle">IEEE is the oldest student body of SIES GST.</p>
+                <nav aria-label="Footer Navigation">
+                    <p class="footer-links">
+                        <a href="#home" itemprop="url" class="link-1">Home</a>
+                        <a href="#events" itemprop="url">Events</a>
+                        <a href="#gallery" itemprop="url">Gallery</a>
+                        <a href="#about-us" itemprop="url">About Us</a>
+                    </p>
+                </nav>
+                <p class="footer-name">© SIES GST, NERUL</p>
+            </div>
+
+            <div class="footer-center">
+                <div itemscope itemtype="http://schema.org/PostalAddress" class="p-address">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                    <p>
+                        <span itemprop="streetAddress" class="p-street-address">123 This is a Street</span>
+                        <span itemprop="addressLocality" class="p-locality">A Locality</span>
+                        <span itemprop="addressRegion" class="p-region">Region state</span>
+                        <span itemprop="postalCode" class="p-postal-code">12345</span>
+                    </p>
+                </div>
+                <div>
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    <p itemprop="telephone" class="p-tel">+91 908294420</p>
+                </div>
+                <div>
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    <p><a href="mailto:myname@mail.com" itemprop="email" class="u-email">ieeesidegst@mail.com</a></p>
+                </div>
+            </div>
+
+            <div class="footer-right">
+                <p class="footer-about">
+                    <span>About Us</span>
+                    It is an active body in organising all extra-curricular activities in the
+                    college. This academic year, IEEE SIES GST saw a growth like never before within participation for
+                    most of
+                    its events
+                    having increased by leaps and bounds.
+                </p>
+                <div class="footer-socials">
+                    <a href="#" rel="me" aria-label="LinkedIn" itemprop="sameAs" class="u-url"><i
+                            class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" rel="me" aria-label="GitHub" itemprop="sameAs" class="u-url"><i
+                            class="fa-brands fa-github"></i></a>
+                    <a href="#" rel="me" aria-label="Twitter" itemprop="sameAs" class="u-url"><i
+                            class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#" rel="me" aria-label="Mastodon" itemprop="sameAs" class="u-url"><i
+                            class="fa-brands fa-mastodon"></i></a>
+                    <a href="#" rel="me" aria-label="Threads" itemprop="sameAs" class="u-url"><i
+                            class="fa-brands fa-threads"></i></a>
+                    <a href="#" rel="me" aria-label="Facebook" itemprop="sameAs" class="u-url"><i
+                            class="fa-brands fa-facebook"></i></a>
+                    <a href="#" rel="me" aria-label="Instagram" itemprop="sameAs" class="u-url"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
+        </footer>
+
     </div>
     <script>
 
@@ -325,6 +376,19 @@
             color2: 0x181818,
             backgroundColor: 0x181818,
             speed: 2,
+        });
+        VANTA.DOTS({
+            el: "#vanta-bg-gallery",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 100.00,
+            minWidth: 100.00,
+            scale: 0.7,
+            scaleMobile: 1.00,
+            color: 0xf2f2f2,
+            color2: 0x181818,
+            backgroundColor: 0x181818,
         });
         VANTA.DOTS({
             el: "#vanta-bg-gallery",
